deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: documentation
  annotations:
    "ingress.gcp.kubernetes.io/pre-shared-cert"   = # name of certificate
    "kubernetes.io/ingress.global-static-ip-name" = # module.dns-dp.global_static_ips.0
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: documentation
            port: 1313
